log/build_2021-10-22_06-16-50/publisher3431/stderr.log
  File "/home/rsa2021/py_pub_sub/install/publisher3431/lib/python3.8/site-packages/publisher3431/subscriber_ass2.py", line 42
    centre = [x3+x1)/2,(y3+y1)/2]
                   ^
SyntaxError: closing parenthesis ')' does not match opening parenthesis '['

